--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://soohyun08.github.io/personal-project/web",
+  "homepage": "https://soohyun08.github.io/personal-project",
   "name": "230102",
   "version": "0.1.0",
   "private": true,
